fix  isOpen property and firefox alignment

--- a/Examples/Widgets/HospitalBedCapacity/src/components/Hospitals.scss
+++ b/Examples/Widgets/HospitalBedCapacity/src/components/Hospitals.scss
@@ -103,6 +103,7 @@ $main-border: 1px solid var(--md-primary-seperator-color, #ccc);
       .icons {
         float: right;
         margin-top: 4px;
+        height: 24px;
 
         md-button {
           margin-left: 1rem;
